2003-12-22  Jakub Jelinek  <jakub@redhat.com>

	* objdump.c (disassemble_bytes): Subtract rel_offset from printed
	reloc address.
	(disassemble_section): Set rel_offset to section->vma instead of
	pinfo->buffer_vma.

2003-12-19  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>

	* readelf.c (guess_is_rela): Changed m32r's default type to RELA.

2003-12-11  Nick Clifton  <nickc@redhat.com>

	* objcopy.c (strip_usage): Add --only-keep-debug.
	(copy_usage): Likewise.

2003-12-04  Nick Clifton  <nickc@redhat.com>

	* objcopy.c (copy_object): Do not copy the object if the
	output file's format cannot be set to that of the input file.
	If the input file's format is unknown, fail.

2003-11-28  Ian Lance Taylor  <ian@wasabisystems.com>

	* cxxfilt.c (usage): Mention new -p/--no-params options.

2003-11-28  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am (install-exec-local): Remove common term from string
	comparison.
	* Makefile.in: Regenerate.
	* doc/Makefile.am: Don't use $<.
	* doc/Makefile.in: Regenerate.

2003-11-27  Nick Clifton  <nickc@redhat.com>

	* rename.c (smart_rename): Make sure that we have write
	permission on the destination file before renaming.

2003-11-26  Daniel Jacobowitz <drow@mvista.com>
	    Nick Clifton  <nickc@redhat.com>

	* readelf.c: Add a comment describing the difference between
	readelf and objdump.
	* doc/binutils.texi (readelf): Likewise.

2003-11-25  Danny Smith  <dannysmith@users.sourceforge.net>

	* doc/binutils.texi (dlltool): Document dlltool --temp-prefix
	option.
	* dlltool.c (usage): Likewise.

2003-11-22  Ian Lance Taylor  <ian@wasabisystems.com>

	* cxxfilt.c (long_options): Add --no-params.
	(main): Handle -p/--no-params.
	* doc/binutils.texi (c++filt): Document -p/--no-params.

2003-11-19  Alan Modra  <amodra@bigpond.net.au>

	* objdump.c: Wrap long lines, init vars separately from decl.
	(disassemble_section): Reset require_sec after call to
	find_symbol_for_address.

2003-11-14  Nick Clifton  <nickc@redhat.com>
